<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".view.ResumoPedidoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resumo_pedido" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/adicionar_mais_itens"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageViewdr1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@color/cinza"
                    tools:src="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9tr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Coca - Cola Lata" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView1fg0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Obs:" />

                        <TextView
                            android:id="@+id/textView1fg2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="1"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/imageView2ghfd"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_baseline_add_circle_24"
                            android:tint="@color/purple_700" />

                        <ImageView
                            android:id="@+id/imageView3fd"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_baseline_remove_circle_24"
                            android:tint="@color/purple_700" />

                        <ImageView
                            android:id="@+id/imageViewdfg4"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_baseline_delete_24"
                            android:tint="#DF0D0D" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView1fdgd3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="R$: 10,00" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageViewdfg"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@color/cinza"
                    tools:src="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9dfg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Coca - Cola Lata" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView1sd0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Obs:" />

                        <TextView
                            android:id="@+id/textView1f2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="1"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/imageViewfg2"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_baseline_add_circle_24"
                            android:tint="@color/purple_700" />

                        <ImageView
                            android:id="@+id/imageViewsf3"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_baseline_remove_circle_24"
                            android:tint="@color/purple_700" />

                        <ImageView
                            android:id="@+id/imageView4fs"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_baseline_delete_24"
                            android:tint="#DF0D0D" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView1gfh3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="R$: 10,00" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageViewsrw"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@color/cinza"
                    tools:src="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9hju"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Coca - Cola Lata" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView10iuoyu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Obs:" />

                        <TextView
                            android:id="@+id/textView1yuiy2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="1"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/imageViewyi2"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_baseline_add_circle_24"
                            android:tint="@color/purple_700" />

                        <ImageView
                            android:id="@+id/imageView3yiy"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_baseline_remove_circle_24"
                            android:tint="@color/purple_700" />

                        <ImageView
                            android:id="@+id/imageView4ry"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_baseline_delete_24"
                            android:tint="#DF0D0D" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView13ry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="R$: 10,00" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@color/cinza"
                    tools:src="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Coca - Cola Lata" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Obs:" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="1"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_baseline_add_circle_24"
                            android:tint="@color/purple_700" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_baseline_remove_circle_24"
                            android:tint="@color/purple_700" />

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_baseline_delete_24"
                            android:tint="#DF0D0D" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="R$: 10,00" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/valor" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/comissionamento" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/couvert" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/valorTotal" />
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gerar_cobranca" />
</LinearLayout>